fix(*): fix overflow issue in clients section

--- a/src/components/section-clients/index.scss
+++ b/src/components/section-clients/index.scss
@@ -5,8 +5,6 @@
   background: #ffffff;
 
   @include mobile {
-    overflow: auto;
-
     .title {
       font-family: TitiliumWeb-Light;
       font-size: 30px;
